@@ -8,7 +8,7 @@ default-mix-mode = avg
 bmode-defaults-nonrt = 1024,false,50,false,100000,true
 bmode-defaults-rt = 1024,true,50,true,100000,true
 bmode-defaults-rtlowlatency = 256,true,50,true,100000,false
-resource-directory = @datadir@/ecasound
+resource-directory = @pkgdatadir@
 resource-file-genosc-envelopes = generic_oscillators
 resource-file-effect-presets = effect_presets
 ladspa-plugin-directory = @prefix@/lib/ladspa
